# signalforge

./: .env.example  .gitignore  README.md
apps/admin-web/: package-lock.json  package.json  tailwind.config.cjs  tsconfig.json
apps/admin-web/app/: globals.css  layout.tsx  page.tsx
apps/admin-web/lib/: api.ts  storage.ts
apps/api/: Dockerfile  alembic.ini  pyproject.toml  start.sh
apps/api/app/: main.py
apps/api/app/core/: config.py  logging.py  rate_limit.py  security.py
apps/api/app/db/: base.py  session.py
apps/api/app/db/migrations/: env.py
apps/api/app/db/migrations/versions/: 0001_initial.py  0002_schedule_backoff.py  0003_oauth_states.py
apps/api/app/models/: __init__.py  models.py
apps/api/app/routers/: accounts.py  analytics.py  auth.py  deps.py  drafts.py  ideas.py  oauth.py  posts.py  scheduler.py  sources.py  workspaces.py
apps/api/app/schemas/: accounts.py  auth.py  drafts.py  ideas.py  posts.py  sources.py  workspaces.py
apps/api/app/services/: analytics.py  celery_client.py  dedupe.py  llm_client.py  safety.py  scheduler.py  x_client.py
apps/api/app/tests/: test_guardrails.py  test_scheduler.py  test_security.py
infra/: docker-compose.yml
scripts/: create_admin.py  seed_dev.py
shared/: __init__.py
shared/prompts/: thread_5.txt  tweet_hook_payoff.txt  tweet_single.txt
shared/templates/: formats.json
shared/utils/: text.py
workers/: Dockerfile  celery_app.py  pyproject.toml
workers/tasks/: __init__.py  analytics.py  generate.py  guardrails.py  ingest.py  learn.py  publish.py  schedule.py  score.py
(+1 files in other folders)
