[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signalforge-api"
version = "0.1.0"
description = "SignalForge API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "cryptography>=42.0",
    "passlib[bcrypt]>=1.7",
    "bcrypt<5",
    "python-jose[cryptography]>=3.3",
    "email-validator>=2.1",
    "celery>=5.4",
    "openai>=1.0",
    "httpx>=0.27",
    "pytest>=7.4",
]

[tool.setuptools]
packages = ["app"]

